tests/should_succeed/unused_import.jou
import "stdlib/assert.jou"  # Warning: "stdlib/assert.jou" imported but not used
import "./imported/public_global.jou"  # Only a global variable used
import "stdlib/str.jou"  # Only a function used
import "./imported/bar.jou"  # Only a class used
import "stdlib/mem.jou"  # Warning: "stdlib/mem.jou" imported but not used


def main() -> int:
    x = public_global
    y = strcmp("foo", "bar")
    z = Point{x=1, y=2}

    # prevent unused variable warnings
    return x + y + z.x + (-1)*(x + y + z.x)
