tests/syntax_error/missing_field_names.jou
class Point:
    x: int
    y: int

def foo() -> None:
    p = Point{1, 2}  # Error: expected a field name, got an integer
